--- a/lang/en.json
+++ b/lang/en.json
@@ -159,6 +159,10 @@
         "name": "Enable custom theme",
         "hint": "Enables the custom colour and typeface selected in Configure Colours."
       },
+      "playerCurrencyPath": {
+        "name": "Override Player Currency Path",
+        "hint": "Path to player currency (e.g., 'system.currency' for D&D5e). Leave blank to use detected system."
+      },
       "itemDenominationPath": {
         "name": "Override Item Currency Path",
         "hint": "Path to item currency denomination (e.g., 'system.price.denomination' for D&D5e). Leave blank to use detected system."
